Fixed a wrong behavior with flex-basis property on Firefox

--- a/django-website/wheelie/client/scss/layout/landing/_landing_works.scss
+++ b/django-website/wheelie/client/scss/layout/landing/_landing_works.scss
@@ -14,6 +14,11 @@
   height: 100%;
   width: 100%;
 
+  /* This solves a bug with flex-basis property that affects Firefox */
+  & > * {
+    min-width: 0;
+  }
+
   @media #{$small}, #{$medium}, #{$large} {
     flex-direction: column;
   }
